# scaffold

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  scaffold.json
src/: scaffold.py
tests/: test_scaffold.py
